Changelog
=========

2.0.2 - unreleased
------------------

* Avoid deprecation warnings under Zope 2.13.
  [hannosch]

* Change the schema cache key to avoid an issue during content migration when
  there might be two objects that have the same UID but different schemata.
  Now concatenating the Python id() with the UID (id() alone isn't good enough,
  as two objects with non-overlapping lifetimes may have the same id() value).
  Fixes http://dev.plone.org/plone/ticket/10637.
  [davisagli]

2.0.1 - 2010-05-23
------------------

* Disable the schema cache during test runs.
  [hannosch]

2.0 - 2010-05-23
----------------

* Removed the ``caching.zcml`` and enabled caching by default. You can use
  a different caching implementation by using an ``overrides.zcml`` file.
  [hannosch]

* Added ``z3c.autoinclude`` entry point to mark this as a Plone plugin.
  [hannosch]

1.6 - 2010-03-22
----------------

* Fix index accessor to support setting custom accessor methods.
  [witsch]

1.5 - 2009-11-18
----------------

* Fixed test failure in usage.txt.
  [hannosch]

* Standardized package metadata layout.
  [hannosch]

1.4 - 2009-11-05
----------------

* Fix schema copying to also include properties and layers.
  [maerteijn]

1.3 - 2009-10-20
----------------

* Refactored the TranslatableExtensionField getMutator to directly reuse the
  generatedMutatorWrapper from LinguaPlone itself. This avoids duplicating the
  logic and lets schemaextender fields use the special reference field
  handling introduced in LinguaPlone. This change introduces a version
  requirement for LinguaPlone of at least 3.0b6.
  [hannosch]

1.2 - 2009-10-10
----------------

* Add `ISchema` adapter using simple caching on the request in order to
  avoid redundant calculation of the (extended) schema.  The adapter is
  not enabled by default and can be activated by loading `caching.zcml`.
  [witsch]

* Avoid using the overridden `+` operator when copying the original schema